# pixi-microdrop

./: .gitmodules  README.md  microdrop.bat  opendrop-microdrop.bat  run_microdrop.ps1  run_microdrop.sh
microdrop-py/: pyproject.toml
microdrop-py/scripts/: plugin_consts.py
microdrop-py/tools/: run_device_viewer_pluggable.py
