[project]
authors = [{name = "Vigne-hub", email = "vignesh.rajesh@outlook.com"}]
dependencies = ["pyside6==6.9.2,<7", "opencv-python-headless>=4.11.0.86,<5"]
name = "microdrop-py"
requires-python = ">= 3.11"
scripts = { microdrop = "examples.microdrop:microdrop" }
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "alexsk", "vignesh229"]
platforms = ["linux-aarch64"]

# --- NEW: System Requirements ---
# This tells Pixi (and uv) to select wheels compatible with glibc 2.31
# This effectively enforces "manylinux_2_31" for PyPI packages.
[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.39" }

[tool.pixi.pypi-dependencies]
microdrop_py = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/device_viewer",
    "src/dropbot_controller",
    "src/dropbot_status",
    "src/dropbot_tools_menu",
    "src/electrode_controller",
    "src/manual_controls",
    "src/message_router",
    "src/microdrop_utils",
    "src/microdrop_application",
    "src/examples"
]

[tool.pixi.dependencies]
apptools = ">=5.3.1,<6"
dramatiq = ">=1.18.0,<2"
dropbot = ">=1.73.22.post2,<2"
redis-server = ">=6.0.0"
envisage = ">=7.0.4,<8"
pyface = ">=8.0.0,<9"
pytest = ">=8.4.2,<9"
shapely = ">=2.1.1,<3"
pydantic = ">=2.11.7,<3"
traits = ">=7.0.2,<8"
traitsui = ">=8.0.0,<9"
redis-py = ">=6.4.0,<7"
apscheduler = ">=3.11.0,<4"
ipython = ">=9.5.0,<10"
tqdm = ">=4.67.1,<5"
ffmpeg = ">=8.0.0,<9"
mr-box-peripheral-board = ">=0.31.7,<0.32"
"svg.path" = ">=7.0,<8"