[project]
name = "microdrop-py"
version = "0.1.0"
authors = [{name = "Vigne-hub", email = "vignesh.rajesh@outlook.com"}]
requires-python = ">= 3.11"
dependencies = ["pyside6<=6.9.2,<7"]
scripts = { microdrop = "examples.microdrop:microdrop" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "alexsk", "vignesh229"]
platforms = ["linux-aarch64", "win-64"]

# --- System Requirements ---
# Preserved from Linux config. This ensures manylinux_2_31 compatibility
# on Linux. Pixi will safely ignore this on Windows.
[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }

[tool.pixi.pypi-dependencies]
microdrop_py = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
    "src/device_viewer",
    "src/dropbot_controller",
    "src/dropbot_status",
    "src/dropbot_tools_menu",
    "src/electrode_controller",
    "src/manual_controls",
    "src/message_router",
    "src/microdrop_utils",
    "src/microdrop_application",
    "src/examples"
]

# --- Shared Dependencies ---
# redis-server and ntfsutils are removed from here and placed in targets below
[tool.pixi.dependencies]
apptools = ">=5.3.1,<6"
dramatiq = ">=1.18.0,<2"
envisage = ">=7.0.4,<8"
pyface = ">=8.0.0,<9"
pytest = ">=8.4.2,<9"
shapely = ">=2.1.1,<3"
pydantic = ">=2.11.7,<3"
traits = ">=7.0.2,<8"
traitsui = ">=8.0.0,<9"
redis-py = ">=6.4.0,<7"
apscheduler = ">=3.11.0,<4"
ipython = ">=9.5.0,<10"
tqdm = ">=4.67.1,<5"
ffmpeg = ">=8.0.0,<9"
mr-box-peripheral-board = ">=0.31.7,<0.32"
"svg.path" = ">=7.0,<8"
plotly = ">=6.5.2,<7"

# --- TARGET: Windows (win-64) ---
[tool.pixi.target.win-64.dependencies]
ntfsutils = ">=0.1.5,<0.2"
redis-server = ">=3.0.501,<4"
dropbot = "1.73.22.*"
dropbot-dev = "1.73.22.*"

# --- TARGET: Linux (linux-aarch64) ---
[tool.pixi.target.linux-aarch64.dependencies]
redis-server = ">=6.0.0"
dropbot = ">=1.73.22.post2,<2"
dropbot-dev = ">=1.73.22"
